fix display on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .table{
     width:auto;
-    min-width: 24em;
     text-align: right;
 }
 .card{
